welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:28: error: too many arguments for method faireW: ()Unit
					faireW(c:Color)
                                              ^MethodsPicture:35: error: not found: value c
					faireV3(c:Color) 
                                                ^